[package]
name = "jadeite-ui"
version = "0.1.0"
edition = "2018"
authors = ["Osama Arafa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jadeite = { version = "0.1.0", path = "../" }
sdl2 = { version = "0.34.5", features = ["bundled", "unsafe_textures"] }
rusttype = "0.9.2"
